--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -58,7 +58,7 @@
   .contact-decs-title {
     font-size: 32px;
   }
-  .contact-list-items {
+  .content-list-items {
     flex-wrap: wrap;
     justify-content: center;
   }
